--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react-dom": "^18.0.8",
     "concurrently": "^7.6.0",
     "eslint": "^8.27.0",
+    "prisma": "^4.8.1",
     "sass": "^1.57.1",
     "typescript": "^4.8.4"
   },
