feat: destroy cookie session on logout

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mongodb+srv://<login>:<password>@<cluster>/<db_name>?retryWrites=true&w=majority"
+SESSION_SECRET="your-dirty-little-secret"
